--- a/codecleaner/css/style.css
+++ b/codecleaner/css/style.css
@@ -1,3 +1,5 @@
+#label_limit_post_revisions{ display:none;}
+#limit_post_revisions{display:none;}
 .codecleaner-admin h2 {
 	font-size: 24px;
 	line-height: normal;
